agregando estilo con css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- link main css -->
+    <link rel="stylesheet" href="src/css/main.css" />
   </head>
 
   <body>
@@ -30,6 +33,7 @@
                 <a href="#"><span class="material-icons">&#xe853;</span></a>
               </div>
             </div>
+
             <!-- estructura menu movil -->
             <div class="links">
               <a href="#">Game Pass</a>
@@ -42,35 +46,36 @@
               <a href="#">All Microsoft</a>
               <a href="#">Search</a>
             </div>
+          </div>
 
-            <!-- estructura de escritorio -->
-            <ul>
-              <li><a href="#">Microsoft</a></li>
-              <li><a href="#" class="link">Game Pass</a></li>
-              <li><a href="#" class="link">Games</a></li>
-              <li><a href="#" class="link link-hide">Devices</a></li>
-              <li><a href="#" class="link link-hide">Cloud Gaming</a></li>
-              <li><a href="#" class="link link-hide">Community</a></li>
-              <li><a href="#" class="link link-hide">Support</a></li>
-              <li><a href="#" class="link link-hide">My Xbox</a></li>
+          <!-- estructura de escritorio -->
+          <ul>
+            <li><a href="#">Microsoft</a></li>
+            <li><a href="#" class="link">Game Pass</a></li>
+            <li><a href="#" class="link">Games</a></li>
+            <li><a href="#" class="link link-hide">Devices</a></li>
+            <li><a href="#" class="link link-hide">Cloud Gaming</a></li>
+            <li><a href="#" class="link link-hide">Community</a></li>
+            <li><a href="#" class="link link-hide">Support</a></li>
+            <li><a href="#" class="link link-hide">My Xbox</a></li>
 
-              <li class="more">
-                <a href="#" class="link" id="bmore">More</a>
-                <div class="menu">
-                  <li><a href="#">Devices</a></li>
-                  <li><a href="#">Cloud Gaming</a></li>
-                  <li><a href="#">Community</a></li>
-                  <li><a href="#">Support</a></li>
-                  <li><a href="#">My Xbox</a></li>
-                </div>
-              </li>
-            </ul>
-         
-            <ul>
-                <li><a href="#" class="link">Seacrh</a></li>
-                <li><a href="#" class="link">Cart</a></li>
-                <li><a href="#" class="link">Sing In</a></li>
-            </ul>
+            <li class="more">
+              <a href="#" class="link" id="bmore">More</a>
+              <div class="menu">
+                <a href="#">Devices</a>
+                <a href="#">Cloud Gaming</a>
+                <a href="#">Community</a>
+                <a href="#">Support</a>
+                <a href="#">My Xbox</a>
+              </div>
+            </li>
+          </ul>
+          <!-- login -->
+          <ul>
+            <li><a href="#" class="link">Seacrh</a></li>
+            <li><a href="#" class="link">Cart</a></li>
+            <li><a href="#" class="link">Sing In</a></li>
+          </ul>
         </nav>
       </header>
     </div>
