terminando el hedader responsy mobile,escritorio con css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <button id="bmenu">
                 <span class="material-icons">&#xe5d2;</span>
               </button>
+
               <!-- logo -->
               <a href="#">Microsoft</a>
 
@@ -79,5 +80,7 @@
         </nav>
       </header>
     </div>
+
+    <script src="src/js/main.js"></script>
   </body>
 </html>
