terminando header ultimos detalles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
           <!-- estructura de escritorio -->
           <ul>
-            <li><a href="#">Microsoft</a></li>
+            <li>
+              <a href="#"
+                ><img src="/images/logo.png" alt="logo microsoft" width="125"
+              /></a>
+            </li>
             <li><a href="#" class="link">Game Pass</a></li>
             <li><a href="#" class="link">Games</a></li>
             <li><a href="#" class="link link-hide">Devices</a></li>
