--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
           </ul>
         </nav>
       </header>
+
+      <section id="banner">
+        <h1>Halo infinite</h1>
+        <p>
+          <a href="" class="green-button">
+            Get it Now <span class="material-icons">&#xe5e1;</span>
+          </a>
+        </p>
+
+        <p>Avaliable now with Xbox Game Pass</p>
+        <p>
+          <a href="#" class="green-link">
+            JOIN NOW<span class="material-icons">&#xe5e1;</span></a
+          >
+        </p>
+      </section>
     </div>
 
     <script src="src/js/main.js"></script>
