--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </header>
 
       <section id="banner">
-        <h1>Halo infinite</h1>
+        <h2>Halo Infinite</h2>
         <p>
           <a href="" class="green-button">
             Get it Now <span class="material-icons">&#xe5e1;</span>
