creando section de video

--- a/index.html
+++ b/index.html
@@ -99,6 +99,35 @@
           >
         </p>
       </section>
+
+      <!-- section video youtube -->
+      <section id="videos">
+        <h2>BECOME</h2>
+
+        <p class="w-75">
+          The legendary Halo Sreies returns with the most expansive Master Chief
+          Campaing yet and a ground-breaking free to play multiplayer
+          expereience.
+        </p>
+
+        <h3>Trailers and Gameplay</h3>
+
+        <!-- slider -->
+        <div id="slaider">
+          <div id="controls">
+            <button class="prev">
+              <span class="material-icons">&#xe5e0;</span>
+            </button>
+            <button class="next">
+              <span class="material-icons">&#xe5e1;</span>
+            </button>
+          </div>
+
+          <div id="current"></div>
+
+          <div id="videos-container"></div>
+        </div>
+      </section>
     </div>
 
     <script src="src/js/main.js"></script>
